# retro

./: .env  .replit  DEPLOYMENT_GUIDE.md  app.py  config_template.env  database.py  firebase_config.py  models.py  pyproject.toml  replit.md  requirements.txt  run.py
static/css/: retro.css
static/js/: firebase-auth.js  forum.js  voting.js
templates/: base.html  category.html  create_thread.html  index.html  login.html  thread.html
