[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.5",
    "email-validator>=2.2.0",
    "firebase-admin>=6.9.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-cloud-firestore>=2.21.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "sift-stack-py>=0.7.0",
    "sqlalchemy>=2.0.41",
]
